--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
-    "react-type-animation": "^3.2.0"
+    "react-slick": "^0.31.0",
+    "react-type-animation": "^3.2.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
