--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
@@ -18,8 +20,10 @@
     "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.31.0",
+    "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
